--- a/dev/front/react/portfolio/src/css/aboutme.css
+++ b/dev/front/react/portfolio/src/css/aboutme.css
@@ -18,6 +18,7 @@
 	overflow: hidden;
 	max-width: 445px;
 	max-height: 581px;
+	margin: 10px;
 }
 
 .info {
@@ -26,12 +27,63 @@
 	align-items: center;
 }
 
+.skills {
+	width: 100%;
+	height: 581px;
+	background: black;
+	border-radius: 10px;
+	margin: 10px;
+	color: white;
+	display: flex;
+	padding: 10px;
+}
+
+.table {
+	font-size: 35px;
+}
+
+.skillscolumn {
+	width: 50%;
+}
+
+.tableli {
+	font-size: 25px;
+}
+
 @media screen and (max-width: 1100px) {
 	.my_photo {
 		margin: 15px auto;
 	}
 
+	.skills {
+		margin: 15px auto;
+		display: block;
+		height: 100%;
+	}
+
 	.info {
 		display: block;
+	}
+}
+
+@media screen and (max-width: 450px) {
+	.table {
+		font-size: 25px;
+	}
+	
+	.mainh1 {
+		font-size: 35px;
+	}
+
+	.tableli {
+		font-size: 15px;
+	}
+
+	.mainp {
+		font-size: 15px;
+	}
+	
+	.skillscolumn {
+		width: 100%;
 	}
 }
