--- a/dev/front/react/portfolio/src/css/FeedbackCard.css
+++ b/dev/front/react/portfolio/src/css/FeedbackCard.css
@@ -6,11 +6,11 @@
 	padding: 10px;
 	overflow: hidden;
 	margin: 10px;
+	border-radius: 10px;
 }
 
 .cardhead {
 	width: 100%;
-	/* background-color: red; */
 	padding: 10px;
 	display: flex;
 	align-items: center;
