--- a/dev/front/react/portfolio/src/css/Feedbackform.css
+++ b/dev/front/react/portfolio/src/css/Feedbackform.css
@@ -35,31 +35,34 @@
 
 .feedbackforminput {
 	display: block;
-	padding: 10px;
+	padding: 20px;
 	border-radius: 10px;
 	border: none;
 	margin: 15px auto;
 	width: 100%;
+	font-size: 25px;
 }
 
 .feedbackformtextarea {
 	display: block;
-	padding: 10px;
+	padding: 20px;
 	border-radius: 10px;
 	border: none;
 	width: 100%;
 	height: 150px;
 	margin: 15px auto;
 	resize: none;
+	font-size: 25px;
 }
 
 .feedbackformbutton {
-	padding: 10px;
+	padding: 20px;
 	border-radius: 10px;
 	border: none;
 	width: 100%;
 	cursor: pointer;
 	transition: 0.3s;
+	font-size: 25px;
 }
 
 .feedbackformbutton:hover {
