--- a/dev/front/react/portfolio/src/css/aboutme.css
+++ b/dev/front/react/portfolio/src/css/aboutme.css
@@ -31,7 +31,7 @@
 
 .skills {
 	width: 100%;
-	height: 581px;
+	height: max-content;
 	background: black;
 	border-radius: 10px;
 	margin: 10px;
@@ -42,6 +42,7 @@
 
 .table {
 	font-size: 35px;
+	margin: 25px 50px 25px 50px;
 }
 
 .skillscolumn {
@@ -50,6 +51,7 @@
 
 .tableli {
 	font-size: 25px;
+	margin: 5px;
 }
 
 @media screen and (max-width: 1100px) {
@@ -60,7 +62,7 @@
 	.skills {
 		margin: 15px auto;
 		display: block;
-		height: 100%;
+		padding: 10px 0 10px 0;
 	}
 
 	.info {
@@ -71,6 +73,7 @@
 @media screen and (max-width: 450px) {
 	.table {
 		font-size: 25px;
+		margin: 25px;
 	}
 	
 	.mainh1 {
