--- a/dev/front/react/portfolio/src/css/ExampleCard.css
+++ b/dev/front/react/portfolio/src/css/ExampleCard.css
@@ -1,6 +1,7 @@
 .examplecard {
+    position: relative;
     width: 450px;
-    height: 350px;
+    height: 450px;
     background-color: rgb(100, 100, 100);
     border-radius: 10px;
     /* overflow: hidden; */
@@ -10,7 +11,7 @@
 
 .image {
     width: 100%;
-    height: 70%;
+    height: 250px;
     position: relative;
     border-radius: 10px;
     overflow: hidden;
